(env
 (dev
  (flags (:standard -w -27-26-32))))

(library
 (name arrays)
 (modules arrays))
(test
 (name test_arrays)
 (modules test_arrays)
 (libraries arrays))

(library
 (name bitset)
 (modules bitset))
(test
 (name test_bitset)
 (modules test_bitset)
 (libraries bitset))

(executable
 (name brainfuck)
 (promote (until-clean))
 (modules brainfuck))

(library
 (name braun)
 (modules braun))
(test
 (name test_braun)
 (modules test_braun)
 (libraries braun))

(executable
 (name burr)
 (promote (until-clean))
 (modules burr))

(executable
 (name dice_puzzle)
 (promote (until-clean))
 (modules dice_puzzle)
 (libraries bag))

(library
 (name dlx)
 (modules dlx))
(library
 (name dlxm)
 (modules dlxm))

(executable
 (name dlx_queens)
 (promote (until-clean))
 (modules dlx_queens)
 (libraries dlx))

(library
 (name dyadic)
 (modules dyadic)
 (libraries zarith))
(test
 (name test_dyadic)
 (modules test_dyadic)
 (libraries dyadic))

(library
 (name fenwick)
 (modules fenwick))
(test
 (name test_fenwick)
 (modules test_fenwick)
 (libraries fenwick))

(library
 (name floyd)
 (modules floyd))
(test
 (name test_floyd)
 (modules test_floyd)
 (libraries floyd))

(library
 (name garsia_wachs)
 (modules garsia_wachs))

(library
 (name idd)
 (modules idd))
(test
 (name test_idd)
 (modules test_idd)
 (libraries idd))

(executable
 (name jotto)
 (modules jotto))

(library
 (name leftistheap)
 (modules leftistheap))

(executable
 (name nerdle)
 (flags ())
 (promote (until-clean))
 (modules nerdle))

(library
 (name parray)
 (modules parray))

(executable
 (name parse_arith)
 (modules parse_arith))

(library
 (name permutation)
 (modules permutation)
 (libraries fenwick))
(test
 (name test_permutation)
 (modules test_permutation)
 (libraries permutation))

(library
 (name prtree)
 (modules prtree))

(library
 (name puf)
 (modules puf)
 (libraries parray))
(test
 (name test_puf)
 (modules test_puf)
 (libraries parray puf))

(library
 (name radixsort)
 (modules radixsort))
(test
 (name test_radixsort)
 (modules test_radixsort)
 (libraries radixsort))

(library
 (name random_access_list)
 (modules random_access_list))

(library
 (name rope)
 (modules rope))
(test
 (name test_rope)
 (modules test_rope)
 (libraries rope))

(executable
 (name rule110)
 (modules rule110))

(executable
 (name sieve)
 (modules sieve))

(executable
 (name sieve_seq)
 (modules sieve_seq)
 (libraries braun))

(library
 (name skew_heap)
 (modules skew_heap))

(executable
 (name soccer)
 (promote (until-clean))
 (modules soccer)
 (libraries permutation))

(library
 (name suffix_tree)
 (modules suffix_tree))

(library
 (name time)
 (modules time)
 (libraries unix))

(executable
 (name tetris)
 (flags ())
 (promote (until-clean))
 (modules tetris)
 (libraries curses unix))

(library
 (name trie)
 (modules trie))

(executable
 (name wordle)
 (flags ())
 (promote (until-clean))
 (modules wordle))


